# satori-video-sdk-cpp-examples

./: LICENSE  Makefile  README.md  conan.cmake
deployment/: empty-bot.yaml
empty-bot/: CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.txt  main.cpp
empty-bot/prod-image/: Dockerfile
empty-bot/src/: main.cpp
empty-opencv-bot/: CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.txt
empty-opencv-bot/src/: main.cpp
empty-tensorflow-bot/: CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.txt
empty-tensorflow-bot/src/: main.cpp
haar-cascades-bot/: CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.txt
haar-cascades-bot/image/: Dockerfile
haar-cascades-bot/src/: main.cpp
motion-detector-bot/: CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.txt
motion-detector-bot/src/: motion_detector_main.cpp
